# bf5d

./: .gitignore  Cargo.toml  README.md  RUN.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts
public/fonts/: LinLibertine.css
src/: main.rs  model.rs
src/components/: bf5d_editor.rs  mod.rs  program_input_editor.rs  program_output.rs  timeline.rs
src/interpreter/: bf5d.rs  mod.rs  types.rs
src/parser/: bf5d.rs  mod.rs  types.rs  utils.rs
styles/: main.css  reset-joshwcomeau.css  uno.css
