[package]
name = "bf5d"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
nom = "7"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.6"
itertools = "0.10.0"
gloo = "0.4"
console_error_panic_hook = "0.1.7"


[dependencies.web-sys]
version = "0.3.55"
features = [
  "HtmlInputElement",
  "HtmlDivElement",
  "HtmlParagraphElement",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Selection',
  "console",
]
